<resources>
    <string name="app_name">AnimeList</string>
    <string name="nom">nom</string>
    <string name="type">type</string>
    <string name="date">date</string>
    <string name="annee">annee</string>
    <string name="mylist">myList</string>
    <string name="sysnopsi">sysnopsi</string>
    <string name="r_sum">résumé</string>
    <string name="notes">Notes :</string>
    <string name="nombres_d_pisode">Nombres d\'épisode:</string>
    <string name="vue">Vue</string>
    <string name="sysnopsis">Sysnopsis :</string>
    <string name="my_anime_view">my anime view</string>
    <string name="my_view_list">My View List</string>
</resources>