<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chienItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:animationCache="false"
    android:background="@color/white"
    android:focusable="auto"
    android:focusableInTouchMode="false"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textColor="#151515"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/typeItem"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="#4A4A4A"
            android:textSize="14sp" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/anneeItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/annee"
            android:textColor="#4A4A4A"
            android:textSize="14sp" /></LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>