<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="animeVM"
            type="fr.iut.animelist.viewmodel.AnimeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.AnimeFragment">

            <TextView
                android:id="@+id/txtNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="48dp"
                android:text="@={animeVM.anime.info.titre}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vue"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:checked="@={animeVM.anime.vue}"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="79dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNom"/>

            <TextView
                android:id="@+id/label_note"
                android:layout_width="wrap_content"
                android:text="@string/notes"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                android:layout_height="wrap_content"/>

            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="48dp"
                android:rating="@={animeVM.anime.note}"
                android:stepSize="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_note"/>

            <LinearLayout
                android:id="@+id/txtInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingbar"
                android:orientation="horizontal"  >

                <TextView
                    android:id="@+id/txtDateStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={animeVM.anime.info.dateSortie}"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="48dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/label_ep"
                    android:layout_width="wrap_content"
                    android:text="@string/nombres_d_pisode"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="48dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/txtNbEpisodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={animeVM.anime.info.nbEpisode}"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="48dp"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/txtInfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfo"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={animeVM.anime.info.subtype}"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="48dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNbEpisodes" />

                <TextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="48dp"
                    android:text="@={animeVM.anime.info.status}"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtFormat" />
            </LinearLayout>

            <TextView
                android:id="@+id/label_sys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sysnopsis"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="48dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInfo2"/>


            <TextView
                android:id="@+id/txtSys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@={animeVM.anime.info.synopsis}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_sys" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>